--- a/vignettes/spTestReferences.bib
+++ b/vignettes/spTestReferences.bib
@@ -17,7 +17,7 @@
 	Author = {Weller, Zachary D. and Hoeting, J.A.},
 	Title = {A Review of Nonparametric Hypothesis Tests of Isotropy Properties in Spatial Data},
 	Year = {2015},
-	Journal = {submitted to Statistical Science, available on arXiv http://arxiv.org/abs/1508.05973 },
+	Journal = {submitted to Statistical Science, available on arXiv},
 	url = {http://arxiv.org/abs/1508.05973}
 }
   
@@ -401,6 +401,17 @@
   pages={810--821},
   year={2004},
   publisher={Taylor \& Francis}
+}
+%Relax Poisson assumptoin
+@article{guan2007asymptotic,
+  title={On asymptotic properties of the mark variogram estimator of a marked point process},
+  author={Guan, Yongtao and Sherman, Michael and Calvin, James A},
+  journal={Journal of statistical planning and inference},
+  volume={137},
+  number={1},
+  pages={148--161},
+  year={2007},
+  publisher={Elsevier}
 }
 
 %Guan-PhD Thesis
